# MultiLayerPerception

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  Neurons.cpp  README.md  SimpleNeuralNetWork.cpp  SimpleNeuralNetWork.hpp  Topology.hpp  cmake_install.cmake  main.cpp  q  quicktesting.cpp  train
src/: Matrix.cpp  Neurons.hpp  SimpleNeuralNetWork.cpp  SimpleNeuralNetWork.hpp  Topology.cpp  main.cpp
